# devops

./: .gitignore  .pre-commit-config.yaml  CI.md  LICENSE.md  README.md  TF.md  app.py  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yaml  scala-application.yml  scala-publish.yaml
ansible/: .gitignore  ansible.cfg
ansible/playbooks/: deploy.yml
app_python/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Jenkinsfile  LICENSE.md  PYTHON.md  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app_python/requirements/: dev.txt  prod.txt
app_python/src/moscow_time/: __init__.py  __main__.py  app.py  config.py  models.py
app_python/src/moscow_time/templates/: index.html  visits.html
app_python/tests/: conftest.py  test_app.py
app_scala/: .gitignore  DOCKER.md  README.md  SCALA.md  build.sbt  docker-compose.yml
app_scala/app/: Module.scala
app_scala/app/controllers/: HomeController.scala
app_scala/app/models/: Time.scala
app_scala/app/views/: index.scala.html  main.scala.html
app_scala/conf/: application.conf  routes
app_scala/project/: plugins.sbt
app_scala/test/: AppSpec.scala
k8s/: 11.md  12.md  13.md  14.md  README.md  deployment.yml  secrets.yaml  service.yml
k8s/moscow-time/: values.yaml
k8s/moscow-time/files/: config.json
k8s/moscow-time/templates/: config.yml  deployment.yaml  (+2 more)
monitoring/: LOGGING.md  docker-compose.yml  docker-config.yml  prometheus.yml
templates/: index.html
terraform/: .gitignore  .terraform.lock.hcl  hosts.tmpl  main.tf  outputs.tf  variables.tf
(+5 files in other folders)
