# build configs
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# black config
[tool.black]
line-length = 79
target-version = ['py36']

# pytest configs
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
]
testpaths = [
    "tests",
]