[metadata]
name = moscow_time
version = 0.0.1
author = Mikhail Olokin
author_email = m.olokin@innopolis.university
description = A simple Flask web-app that shows the current time in Moscow, Russian Federation
long_description = file: PYTHON.md
long_description_content_type = text/markdown
url = https://github.com/nikololiahim/devops
project_urls =
    Bug Tracker = https://github.com/nikololiahim/devops/issues
classifiers =
    Programming Language :: Python :: 3 :: Flask
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore = D203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv,.pytest_cache
